--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -2,6 +2,19 @@
 == CUSTOM STYLES ==
 */
 
+/*
+== FONTS ==
+*/
+
+@font-face {
+  font-family: 'lobster';
+  src: url('../assets/fonts/Lobster-Regular.ttf') format('truetype');
+}
+
+/*
+== OVERALL STYLES ==
+*/
+
 body,
 #root {
   height: 100vh;
@@ -25,15 +38,43 @@ body,
   }
 }
 
+/*
+== DRUM MACHINE ==
+*/
+
 #drum-machine {
   width: 600px;
-  height: 300px;
+  height: 400px;
+  background-color: #111;
+  border: 2px #444;
   border-radius: 20px;
+
+  .logo {
+    font-family: 'lobster';
+  }
 
   .drum-machine-container {
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: space-between;
+
+    #pad-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 10px;
+
+      .drum-pad {
+        height: 100px;
+        width: 100px;
+        background-color: #111;
+        border: 2px solid rgb(141, 51, 51);
+      }
+
+      .drum-pad:hover {
+        cursor: pointer;
+        background-color: #333;
+      }
+    }
   }
 }
