--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -67,13 +67,18 @@ body,
       .drum-pad {
         height: 100px;
         width: 100px;
+        padding-top: 30px;
         background-color: #111;
         border: 2px solid rgb(141, 51, 51);
       }
 
+      .drum-pad.hit {
+        border: 2px solid rgb(250, 5, 5);
+      }
+
       .drum-pad:hover {
         cursor: pointer;
-        background-color: #333;
+        background-color: #222;
       }
     }
   }
