--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -15,8 +15,7 @@
 == OVERALL STYLES ==
 */
 
-body,
-#root {
+body {
   height: 100vh;
 }
 
@@ -45,7 +44,7 @@ body,
 #drum-machine {
   width: 600px;
   height: 400px;
-  background-color: #111;
+  background-color: #222;
   border: 2px #444;
   border-radius: 20px;
 
@@ -65,15 +64,18 @@ body,
       gap: 10px;
 
       .drum-pad {
+        font-size: 20px;
+        font-weight: 600;
         height: 100px;
         width: 100px;
         padding-top: 30px;
         background-color: #111;
-        border: 2px solid rgb(141, 51, 51);
+        border-radius: 5px;
+        border: 3px solid rgb(141, 51, 51);
       }
 
       .drum-pad.hit {
-        border: 2px solid rgb(250, 5, 5);
+        border: 3px solid rgb(250, 5, 5);
       }
 
       .drum-pad:hover {
