--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -3,3 +3,7 @@
 
 /* Import BootStrap Styles */
 @import '~bootstrap/scss/bootstrap';
+
+/* Import FontAwesome Icon Classes */
+$fa-font-path: 'node_modules/@fortawesome/fontawesome-free/webfonts';
+@import 'node_modules/@fortawesome/fontawesome-free/scss/fontawesome';
