--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -108,6 +108,7 @@ body,
       display: flex;
       flex-direction: column;
       align-items: center;
+      min-height: 100%;
 
       #display {
         font-family: 'VT323';
@@ -116,13 +117,19 @@ body,
         font-weight: 700;
         height: 50px;
         width: 220px;
-        background-color: #e65550;
+        background-color: rgb(141, 51, 51);
         border: 3px solid #111;
       }
 
+      #display.active {
+        background-color: #e65550;
+      }
+
       #volume-control {
-        cursor: pointer;
+        margin: 0 10px;
+        width: 160px;
         background-color: #111;
+        cursor: pointer;
       }
 
       #volume-control::-webkit-slider-thumb,
@@ -132,9 +139,35 @@ body,
         width: 25px;
         height: 25px;
         background: #e65550;
-        border: 3px solid #333;
+        border: 3px solid rgb(141, 51, 51);
         border-radius: 0px;
         cursor: pointer;
+      }
+
+      .vol-icon {
+        margin-bottom: 3px;
+      }
+
+      #control-buttons {
+      }
+
+      .control-button {
+        font-size: 20px;
+        font-weight: 600;
+        height: 40px;
+        width: 100px;
+        background-color: #111;
+        border-radius: 5px;
+        border: 3px solid rgb(141, 51, 51);
+      }
+
+      .control-button:hover {
+        cursor: pointer;
+        background-color: #222;
+      }
+
+      .control-button.active {
+        border: 3px solid rgb(250, 5, 5);
       }
     }
   }
