Added Metronome Functionality to Drum Machine
Users can now set a metronome to play at an adjustable BPM while drumming

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -149,6 +149,9 @@ body,
       }
 
       #control-buttons {
+        display: grid;
+        width: 220px;
+        grid-template-columns: repeat(2, 1fr);
       }
 
       .control-button {
